--- a/src/PS.LinkShortener/PS.LinkShortener.csproj
+++ b/src/PS.LinkShortener/PS.LinkShortener.csproj
@@ -11,4 +11,8 @@
     <Folder Include="Data\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="StackExchange.Redis" Version="2.8.31" />
+  </ItemGroup>
+
 </Project>
